welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:13: error: type mismatch;
 found   : Unit
 required: Int
  for ( i <- 0 to t-1){
          ^