welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  var t : Int = nums.length
  var a : Int = nums(0)
  var p : Int = 0
  var d : Int =0
  for ( i <- 0 to t-1){
      if (nums(i)>a) {
        a = nums(i)
        p = i
      }
      
    }
  for ( i <- 0 to t-1){
    if (p == 1){
    if (nums(i)<a & d<nums(i) ){
        d= nums(i)
    }}
    else{
      if (nums(i)<=a & d<nums(i) ){
        d= nums(i)
      
    }
  }
  return d
 }
}